# wekws

./: requirements.txt
.github/workflows/: lint.yml  runtime-build.yml
runtime/onnxruntime/: CMakeLists.txt
wekws/model/: mdtc.py
wekws/utils/: ctc_kws_decoder.py
